tests/gen/testdata/configs/fail/missing_environments.jsonnet
// config without environments is rejected
{
  region: 'eu-frankfurt-1',
  region_short_name: 'fra',
  realm: 'oc1',
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
}
